--- a/iio.html
+++ b/iio.html
@@ -125,6 +125,9 @@
 
                 <div class="col-lg-4">
                     <div class="box" data-aos="zoom-in" data-aos-delay="100">
+                        <div>
+                            <img src="assets/img/lll.jpg" class="img-fluid" alt="">
+                        </div>
                         <h3>Minimum Barrel</h3>
                         <h4>$50-499<span></span></h4>
                         <ul>
@@ -137,6 +140,9 @@
 
                 <div class="col-lg-4">
                     <div class="box featured" data-aos="zoom-in" data-aos-delay="100">
+                        <div>
+                            <img src="assets/img/lll.jpg" class="img-fluid" alt="">
+                        </div>
                         <h3>Standard Barrel</h3>
                         <h4>$500-10,000</h4>
                         <ul>
@@ -149,6 +155,9 @@
 
                 <div class="col-lg-4">
                     <div class="box" data-aos="zoom-in" data-aos-delay="100">
+                        <div>
+                            <img src="assets/img/lll.jpg" class="img-fluid" alt="">
+                        </div>
                         <h3>Dullux Barrel</h3>
                         <h4>$10,000-100,000</h4>
                         <ul>
