--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
           <a href="iio.html" class="btn addedbtn text-uppercase">Invest in oil and gas</a>
         </div>
       </div>
+      <div class="row">
+        
+        <div class="col-12 my-3 d-flex align-items-center justify-content-center my-sm-3">
+          <a href="props.html" class="btn addedbtn text-uppercase">Properties for sale</a>
+        </div>
+      </div>
     </div>
   </section>
 
