--- a/atalanta.html
+++ b/atalanta.html
@@ -62,13 +62,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-4 my-3 d-flex align-items-center justify-content-center">
-                <a href="atalanta.html" class="btn addedbtn text-uppercase">houses in atalanta</a>
+                <a href="iire.html" class="btn addedbtn text-uppercase">houses in atalanta</a>
                 </div>
                 <div class="col-4 my-3 d-flex align-items-center justify-content-center my-sm-3">
-                <a href="spain.html" class="btn addedbtn text-uppercase">Houses in spain</a>
+                <a href="iio.html" class="btn addedbtn text-uppercase">Houses in spain</a>
                 </div>
                 <div class="col-4 my-3 d-flex align-items-center justify-content-center my-sm-3">
-                <a href="chicago.html" class="btn addedbtn text-uppercase">houses in chicago</a>
+                <a href="iio.html" class="btn addedbtn text-uppercase">houses in chicago</a>
                 </div>
             </div>
         </div>
