--- a/chicago.html
+++ b/chicago.html
@@ -153,6 +153,180 @@
           </div><!-- End Chefs Member -->
   
       </div>
+
+      <div class="row gy-4 my-5">
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/2.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Master Chef</span> -->
+              <p>4270 N Kenneth Ave, <br> Chicago, IL 60630 <br> 4 Bedrooms / $4,500 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/3.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Pat?issier</span> -->
+              <p>2227 N Keystone Ave, <br> Chicago, IL 60639 <br> 4 Bedrooms / $2,595 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/1.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Cook</span> -->
+              <p>2717 W Belmont Ave, <br> Chicago, IL 60618 <br> 3 Bedrooms / $2,350 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="chef-member">
+              <div class="member-img">
+                <img src="assets/img/www.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>House for Rent</h4>
+                <!-- <span>Cook</span> -->
+                <p>2700 N Nilton Ave, <br> Chicago, IL 60614 <br> 2 Bedrooms / $2,700 </p>
+                <a class="btn investbtn" href="">Purchase</a>
+            </div>
+            </div>
+          </div><!-- End Chefs Member -->
+  
+      </div>
+
+      <div class="row gy-4 my-5">
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/2.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Master Chef</span> -->
+              <p>4270 N Kenneth Ave, <br> Chicago, IL 60630 <br> 4 Bedrooms / $4,500 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/3.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Pat?issier</span> -->
+              <p>2227 N Keystone Ave, <br> Chicago, IL 60639 <br> 4 Bedrooms / $2,595 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/1.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Cook</span> -->
+              <p>2717 W Belmont Ave, <br> Chicago, IL 60618 <br> 3 Bedrooms / $2,350 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="chef-member">
+              <div class="member-img">
+                <img src="assets/img/www.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>House for Rent</h4>
+                <!-- <span>Cook</span> -->
+                <p>2700 N Nilton Ave, <br> Chicago, IL 60614 <br> 2 Bedrooms / $2,700 </p>
+                <a class="btn investbtn" href="">Purchase</a>
+            </div>
+            </div>
+          </div><!-- End Chefs Member -->
+  
+      </div>
   
     </div>
   </section><!-- End Chefs Section -->
