--- a/spain.html
+++ b/spain.html
@@ -58,51 +58,283 @@
         </div>
     </header><!-- End Header -->
 
-    <section class="my-5 py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 my-3 d-flex align-items-center justify-content-center">
-                <a href="iire.html" class="btn addedbtn text-uppercase">houses in atalanta</a>
-                </div>
-                <div class="col-4 my-3 d-flex align-items-center justify-content-center my-sm-3">
-                <a href="iio.html" class="btn addedbtn text-uppercase">Houses in spain</a>
-                </div>
-                <div class="col-4 my-3 d-flex align-items-center justify-content-center my-sm-3">
-                <a href="iio.html" class="btn addedbtn text-uppercase">houses in chicago</a>
-                </div>
+    <!-- ======= Chefs Section ======= -->
+<section id="chefs" class="chefs section-bg py-5 my-5">
+    <div class="container-fluid" data-aos="fade-up">
+  
+      <div class="section-title my-3">
+        <h2>Spain</h2>
+        <p>Houses in spain</p>
+      </div>
+  
+      <div class="row gy-4">
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/2.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
             </div>
-        </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Master Chef</span> -->
+              <p>4270 N Kenneth Ave, <br> Chicago, IL 60630 <br> 4 Bedrooms / $4,500 </p>
+              <a class="btn investbtn" href="">Purchase</a>
 
-    </section>
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/3.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Pat?issier</span> -->
+              <p>2227 N Keystone Ave, <br> Chicago, IL 60639 <br> 4 Bedrooms / $2,595 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/1.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Cook</span> -->
+              <p>2717 W Belmont Ave, <br> Chicago, IL 60618 <br> 3 Bedrooms / $2,350 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="chef-member">
+              <div class="member-img">
+                <img src="assets/img/www.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>House for Rent</h4>
+                <!-- <span>Cook</span> -->
+                <p>2700 N Nilton Ave, <br> Chicago, IL 60614 <br> 2 Bedrooms / $2,700 </p>
+                <a class="btn investbtn" href="">Purchase</a>
+            </div>
+            </div>
+          </div><!-- End Chefs Member -->
+  
+      </div>
+
+      <div class="row gy-4 my-5">
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/2.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Master Chef</span> -->
+              <p>4270 N Kenneth Ave, <br> Chicago, IL 60630 <br> 4 Bedrooms / $4,500 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/3.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Pat?issier</span> -->
+              <p>2227 N Keystone Ave, <br> Chicago, IL 60639 <br> 4 Bedrooms / $2,595 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/1.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Cook</span> -->
+              <p>2717 W Belmont Ave, <br> Chicago, IL 60618 <br> 3 Bedrooms / $2,350 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="chef-member">
+              <div class="member-img">
+                <img src="assets/img/www.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>House for Rent</h4>
+                <!-- <span>Cook</span> -->
+                <p>2700 N Nilton Ave, <br> Chicago, IL 60614 <br> 2 Bedrooms / $2,700 </p>
+                <a class="btn investbtn" href="">Purchase</a>
+            </div>
+            </div>
+          </div><!-- End Chefs Member -->
+  
+      </div>
+
+      <div class="row gy-4 my-5">
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/2.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Master Chef</span> -->
+              <p>4270 N Kenneth Ave, <br> Chicago, IL 60630 <br> 4 Bedrooms / $4,500 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/3.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Pat?issier</span> -->
+              <p>2227 N Keystone Ave, <br> Chicago, IL 60639 <br> 4 Bedrooms / $2,595 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+  
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+          <div class="chef-member">
+            <div class="member-img">
+              <img src="assets/img/1.jpg" class="img-fluid" alt="">
+              <div class="social">
+                <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a>
+              </div>
+            </div>
+            <div class="member-info">
+              <h4>House for Rent</h4>
+              <!-- <span>Cook</span> -->
+              <p>2717 W Belmont Ave, <br> Chicago, IL 60618 <br> 3 Bedrooms / $2,350 </p>
+              <a class="btn investbtn" href="">Purchase</a>
+
+            </div>
+          </div>
+        </div><!-- End Chefs Member -->
+
+        <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+            <div class="chef-member">
+              <div class="member-img">
+                <img src="assets/img/www.jpg" class="img-fluid" alt="">
+                <div class="social">
+                  <a href=""><i class="bi bi-twitter"></i></a>
+                  <a href=""><i class="bi bi-facebook"></i></a>
+                  <a href=""><i class="bi bi-instagram"></i></a>
+                  <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+              <div class="member-info">
+                <h4>House for Rent</h4>
+                <!-- <span>Cook</span> -->
+                <p>2700 N Nilton Ave, <br> Chicago, IL 60614 <br> 2 Bedrooms / $2,700 </p>
+                <a class="btn investbtn" href="">Purchase</a>
+            </div>
+            </div>
+          </div><!-- End Chefs Member -->
+  
+      </div>
+  
+    </div>
+  </section><!-- End Chefs Section -->
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <section class="strange my-5 py-5">
+    <section class="strange my-5 py-5">
         <div class="container">
             <div class="section-titlel mt-5 mb-5 text-center">
                 <h2 class="">The Most Rental Listings</h2>
@@ -178,7 +410,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
 
 
