--- a/iire.html
+++ b/iire.html
@@ -60,19 +60,19 @@
 
       <!-- ======= About Section ======= -->
       <section id="about" class="about py-5 my-5">
-        <div class="container" data-aos="fade-up">
+        <div class="container-fluid" data-aos="fade-up">
   
           <div class="section-title">
             <h2>AL AAbid-group</h2>
             <p>Invest In real estate</p>
           </div>
   
-          <div class="row content">
-            <div class="col-lg-6 ">
+          <div class="row content ">
+            <div class="col-lg-12 my-4">
                 <img src="assets/img/s.jpeg" class="img-fluid" style="width: 100%;"  alt="">
               </div>
 
-            <div class="col-lg-6" style="text-align: justify;">
+            <div class="col-lg-12" style="text-align: justify;">
               <p>Founded in 2005,Al aabid-group has evolved to become a powerful and vibrant group that employs more than 2000 personnel worldwide in more than 50 companies and branches.
             </p>
             <p>The Chairman has successfully turned Al aabid-group into one of the most celebrated companies in the region, having developed multiple award-winning projects, including the Emirates Financial Towers that earned a Guinness World Record in 2013
